# Jadchenko

./: README.md
00_BizzBuzz/: BizzBuzz.c  BizzBuzz.h  Makefile  main  main.c
01_CANE/: CMakeLists.txt  Cane.c  Cane.h  main.c
01_CONVEYER/: Cane.c  Cane.h  Makefile  test
02_SIGNALS/: .sender.c.swp  Makefile  common.h  input  out  output  receive  receiver.c  send  sender.c
02_TRANS/: Makefile  frolov_define.h  output
02_TRANS/receiver/: .receiver.c.swp  receiver.c
02_TRANS/sender/: .sender.c.swp  sender.c
03_STACK/: CMakeLists.txt  main.c
03_STACK/include/: common.h  stack.h
03_STACK/source/: stack.c
03_STACK_NEW_VERSION/: CMakeLists.txt  README.md  main.c  test2.c
03_STACK_NEW_VERSION/include/: common.h  stack.h
03_STACK_NEW_VERSION/sources/: stack.c
04_CHERT/: CMakeLists.txt  README.md
04_CHERT/include/: chert.h  common.h  copy.h  hashtable.h
04_CHERT/include/copyTools/: copy.h
04_CHERT/include/daemon/: daemon.h
04_CHERT/include/inotifyR/: inotifyR.h
04_CHERT/scripts/: log.sh
04_CHERT/source/: chert.c  common.c  copy.c  daemonInterface.c  hashtable.c  main.c
04_CHERT/source/copyTools/: copy.c
04_CHERT/source/daemon/: daemon.c
04_CHERT/source/inotifyR/: inotifyR.c
04_DAEMON/: CMakeLists.txt  README.md
04_DAEMON/include/: common.h  copyInstr.h
04_DAEMON/source/: copyInstr.c  main.c
19_11_sem_task/: README.md  main.c
29_10_sem_task/: .main.c.swp  README.md  main.c
